pxc/tests/test_31_thrattr/nots.px

namespace mtchk;
import common "";

tsvaluetype struct bar {
  int z;
}

tsvaluetype struct foo(bar const& bx) {
  int x;
  int y;
  bar b;
  vector{bar} bv; // error: not tsvaluetype
  tiptr{bar} bp = tiptr{bar}(bx);
  function int getbz() const { return bp->z; }
}

function void t1() {
  foo f = foo(bar(55));
  println(f.getbz());
}

t1();

